# brightway2-io

./: .cruft.json  .gitignore  .hgignore  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  example.ipynb  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  xml_extractor_ILCD.ipynb
.github/workflows/: github_action_trigger_submodule_pull.yml  github_action_trigger_submodule_pull_reusable.yml  python-package-deploy.yml  python-package-test.yml  python-test.yml  trigger_submodule_update_reuse.yml
bw2io/: __init__.py  backup.py  bw2package.py  chemidplus.py  compatibility.py  download_utils.py  ecoinvent.py  errors.py  import_ecospold.py  import_ecospold2.py  import_method.py  import_simapro.py  matlab.py  migrations.py  modified_database.py  package.py  remapping.py  remote.py  simapro_utilities.py  tests.py  units.py  unlinked_data.py  unlinked_databases.py  utils.py  validation.py  version.py
bw2io/data/: SimaPro - ecoinvent - biosphere.xlsx  __init__.py  biosphere-2-3.json  biosphere_ecoinvent_2_3.py  chemid_cache.json  ecoinvent elementary exchanges 3.1.xml  ecoinvent elementary flows 2-3.xls  ecoinvent-3.01-3.1.json  ecoinvent22.json  exiomigration.json  exiopol.py  simapro-biosphere.json  simapro-water.json  test.json  us-lci.json
bw2io/export/: __init__.py  csv.py  ecospold1.py  excel.py  gexf.py  matlab.py
bw2io/extractors/: __init__.py  csv.py  ecospold1.py  ecospold1_lcia.py  ecospold2.py  excel.py  exiobase.py  ilcd.py  io.py  json_ld.py  simapro_csv.java  simapro_csv.py  simapro_csv_new.py  simapro_lcia_95project_csv.py  simapro_lcia_csv.py
bw2io/importers/: __init__.py  base.py  base_lci.py  base_lcia.py  bonsai.py  csv.py  ecoinvent_lcia.py  ecospold1.py  ecospold1_lcia.py  ecospold2.py  ecospold2_biosphere.py  excel.py  excel_lcia.py  exiobase.py  exiobase2.py  exiobase3.py  exiobase3_hiot.py  exiobase3_hybrid.py  exiobase3_monetary.py  ilcd.py  io.py  json_ld.py  json_ld_lcia.py  pint_formulas.py  simapro_block_csv.py  simapro_csv.py  simapro_lcia_csv.py
bw2io/imprt/: __init__.py  base.py  base_lcia.py  ecoinvent_lcia.py  ecospold1.py  ecospold1_lcia.py  ecospold2.py  ecospold2_biosphere.py  simapro_csv.py  simapro_lcia_csv.py
bw2io/strategies/: __init__.py  biosphere.py  bonsai.py  csv.py  ecospold1.py  ecospold1_allocation.py  ecospold1_lcia.py  ecospold2.py  exiobase.py  generic.py  ilcd.py  io.py  json_ld.py  json_ld_allocation.py  json_ld_lcia.py  lcia.py  locations.py  migrations.py  parameterization.py  pint_formulas.py  products.py  simapro.py  special.py  useeio.py
bw2io/tests/: __init__.py  packaging.py  simapro.py  utils.py
ci/appveyor/: install.ps1
dev/: Exiobase 3.8 import.ipynb  IO-BONSAI importer .ipynb  Untitled.ipynb  json_ld.py
doc/: ILCD_Format_in_a_nutshell.md
docs/proposals/: bw2io_excel_temporal_distribution.md
tests/: __init__.py  base_lci_importer.py  base_lcia_importer.py  excel_csv.py  new_ecoinvent.py  packaging.py  parameterization.py  simapro.py  simapro_block.py  test_backup.py  test_bw2package_compat.py  test_io_importer.py  test_randonneur.py  test_remote.py  test_utils.py  useeio.py  utils.py
tests/csv/: complicated.py  csv_lcia.py  lcia.py  temporal_distribution.py
tests/data/: init_file.py
tests/ecospold1/: ecospold1_extractor.py  ecospold1_importer.py
(+319 files in other folders)
